# design-guide

./: .devcontainer.json  .gitignore  .hlint.yaml  .treefmt.toml  AGENTS.md  Makefile  README.md  TODO.md.example  allowed-colors.csv  brand.json  cabal.project  design-tokens.cabal  devenv.local.nix.example  devenv.nix  devenv.yaml  elm-pages.config.mjs  elm-pages.nix  elm.json  index.html  index.js  logo.cabal  package-lock.json  package.json  pnpm-lock.yaml  style.css
.github/workflows/: deploy.yml  static.yml
agents/: GLOSSARY.md  README.md
agents/adrs/: ADR-0000-agent-guidance.md
agents/stories/: US-001-haskell-pipeline.md
app/: Animate.hs  Api.elm  BrandGen.hs  Compose.hs  Effect.elm  ErrorPage.elm  Main.hs  Shared.elm  Site.elm  SiteMeta.elm  TailwindTokens.elm  View.elm
app/Route/: Index.elm  Kayttoohje.elm  Komponentit.elm  Logot.elm  Responsiivisuus.elm  Saavutettavuus.elm  Typografia.elm  Varit.elm
codegen/: elm.json
codegen/src/: AddRoute.elm  AddStaticRoute.elm
content/: index.md  logos.toml  logot.md  meta.toml  typografia.md  varit.md
layout/: first.blay  head-blink.blay  head-laugh.blay  head-smile.blay  horizontal-rainbow-rot1.blay  horizontal-rainbow-rot2.blay  horizontal-rainbow-rot3.blay  horizontal-rainbow-rot4.blay  horizontal-rainbow-rot5.blay  horizontal-rainbow-rot6.blay  horizontal-rainbow.blay  horizontal-rot1.blay  horizontal-rot2.blay  horizontal-rot3.blay  horizontal-skintone-rot1.blay  horizontal-skintone-rot2.blay  horizontal-skintone-rot3.blay  horizontal-skintone.blay  horizontal.blay  skins.conf  square-basic.blay  square-blink.blay  square-laugh.blay  square-smile.blay  square.blay
public/: brand.css
review/: elm.json
review/src/: ReviewConfig.elm
review/src/LlmAgent/: NoExposingEverything.elm  RequireModuleDoc.elm  RequireTypeAnnotation.elm
scripts/: svg_rasterize.py  svg_to_png.py
src/: Main.hs  SiteMeta.elm  TailwindExtra.elm
src/Brand/: Colors.elm  Colors.hs  DesignData.hs  ElmGen.hs  Json.hs  JsonLd.hs  Logos.elm  Tokens.elm
src/Component/: Accordion.elm  Alert.elm  Badge.elm  Breadcrumb.elm  Button.elm  ButtonGroup.elm  Card.elm  CloseButton.elm  Collapse.elm  ColorSwatch.elm  Dialog.elm  DownloadButton.elm  Dropdown.elm  FeatureGrid.elm  Footer.elm  Hero.elm  ListGroup.elm  LogoCard.elm  MobileDrawer.elm  Navbar.elm  Pagination.elm  Placeholder.elm  Pricing.elm  Progress.elm  SectionHeader.elm  Spinner.elm  Stats.elm  Tabs.elm  Tag.elm  Timeline.elm  Toast.elm  Toggle.elm  Tooltip.elm
src/DesignTokensGen/: ElmGen.hs  Json.hs  Main.hs  Toml.hs  Types.hs
src/Guide/: Colors.elm  CssGen.hs  DesignData.hs  ElmGen.hs  Logos.elm  Tokens.elm
src/Logo/: Animate.hs  Blockify.hs  BrickLayout.hs  Compose.hs  Config.hs  Designs.hs  Favicons.hs  Raster.hs
tests/: TestSuite.hs
tests/Brand/: ColorsSpec.hs  ElmGenSpec.hs  JsonSpec.hs
tests/DesignTokensGen/: ElmGenSpec.hs  JsonSpec.hs
tests/Logo/: BlockifySpec.hs  DesignsSpec.hs
