cabal-version: 2.2
name:          design-tokens-gen
version:       0.1.0.0
license:       BSD-3-Clause
build-type:    Simple

library
  exposed-modules:
    DesignTokensGen.Types, DesignTokensGen.Toml, DesignTokensGen.Json, DesignTokensGen.ElmGen
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, text, bytestring,
    directory, filepath,
    aeson, aeson-pretty,
    toml-parser

-- Generate design tokens: content/ TOML -> dist/ JSON + Elm package.
executable design-tokens-gen
  main-is: DesignTokensGen/Main.hs
  other-modules:
    DesignTokensGen.Types, DesignTokensGen.Toml, DesignTokensGen.Json, DesignTokensGen.ElmGen
  hs-source-dirs: src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, design-tokens-gen,
    text, bytestring, directory, filepath,
    aeson, aeson-pretty, toml-parser

test-suite design-tokens-tests
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
    DesignTokensGen.ElmGenSpec, DesignTokensGen.JsonSpec
  hs-source-dirs: tests
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, text, bytestring, aeson, design-tokens-gen,
    tasty, tasty-hunit, tasty-quickcheck,
    temporary, process
